--- a/templates/results.html
+++ b/templates/results.html
@@ -2,7 +2,9 @@
 <!Doctype html>
 <div class="container">
 <html>
-	<head></head>
-	<body><h1>RESULTS!!</h1></body>
+	<head><title>Home</title></head>
+	<body>
+	
+	</body>
 </html>
 </div>
