--- a/templates/form.html
+++ b/templates/form.html
@@ -3,7 +3,7 @@
 	<head></head>
 	<body>
 		
-	<form method="POST">
+		<form method="POST" action="{% url 'insecure_form_handling' %}" enctype='multipart/form-data'>
 		{% csrf_token %}
 		{{form.as_p}}
 		<input type='submit' value="Submit"/>
