--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,8 +11,8 @@
 <body>
 <nav class="navbar navbar-light bg-light justify-content-between" style="padding:20px">
   <a class="navbar-brand">Navbar</a>
-  <form class="form-inline" style="padding:30px 30px" action="{% url 'search_all' %}">
-    <center><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="padding:10px 10px">
+  <form class="form-inline" style="padding:30px 30px" action="{% url 'search_all' %}" method="GET">
+    <center><input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" style="padding:10px 10px" name='search_query'>
     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button></center>
   </form>
 </nav>
